# EZTRT

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  LICENSE  README.md  eztrtConfig.cmake  eztrtConfigVersion.cmake
cmake/: CopyDllsForDebug.cmake  FindTensorRT.cmake  Warnings.cmake
cool-app/: CMakeLists.txt
cool-app/src/: main.cpp
cool-header-lib/: CMakeLists.txt
cool-header-lib/include/coolHeader/: niftystuff.h
cool-lib/: CMakeLists.txt
eztrt-lib/: CMakeLists.txt
eztrt-lib/include/coolLib/: bar.h
eztrt-lib/include/eztrt/: bar.h  base.h  common.h  model.h  util.h
eztrt-lib/src/: bar.cpp  base.cpp  model.cpp  util.cpp
trt-host/: CMakeLists.txt
trt-host/include/: foo.h
trt-host/src/: foo.cpp  main.cpp
